--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
                     </li>
     
                     <!--dropdown-->
-                    <li class="dropdown-item">
-                        <div class="navbar-link">
+                    <li class="dropdown-item" data-dropdown-toggle>
+                        <div class="navbar-link dropdown-toggle">
                             Serviços <ion-icon name="chevron-down-outline"></ion-icon>
                         </div>
 
@@ -78,7 +78,11 @@
                 </ul>
             </nav>
 
-            <a href="#" class="btn">Login</a>  
+            <a href="#" class="btn">Login</a>
+
+            <button class="search-btn" id="searchToggle" aria-label="Buscar">
+                <ion-icon name="search-outline"></ion-icon>
+            </button>
 
             <button class="nav-toggle-btn" aria-label="menu mobile">
                 <ion-icon name="menu-outline"></ion-icon>
@@ -86,6 +90,12 @@
         </div>
     </header>
 
+    <!--banner-->
+    <section class="banner">
+        <video autoplay muted loop>
+            <source src="assets/videos/video2.mp4">
+        </video>
+    </section>
 
 
     <!--script-->
