--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 </ul>
             </nav>
 
-            <a href="#" class="btn">Login</a>
+            <a href="#" class="btn" id="openLogin">Login</a>
 
             <button class="search-btn" id="searchToggle" aria-label="Buscar">
                 <ion-icon name="search-outline"></ion-icon>
@@ -116,6 +116,23 @@
         <video autoplay muted loop>
             <source src="assets/videos/video2.mp4">
         </video>
+    </section>
+
+    <!--SOBRE-->
+    <section class="section about" aria-label="sobre" id="sobre">
+        <div class="container-sobre">
+            <figure class="about-banner">
+                <img src="assets/img/Sobre.png" alt="sobre" class="w-100 efeito" /> 
+            </figure>
+            <div class="about-content">
+                <p class="section-subtitle">Sobre a PetWash</p>
+                <h2 class="h2 text-center">Seu pet merece um cuidado especial!</h2>
+                <p class="section-text-1">
+                    A PetWash é um espaço de Banho e Tosa especializada para cães e gatos, oferecendo serviços rápidos e de qualidade. Com equipamentos modernos e atendimento personalizado, proporciona praticidade e conforto para os tutores e seus pets.
+                </p>
+                <a href="#" class="btn">Saiba mais</a>
+            </div>
+        </div>
     </section>
 
     <!--GALERIA DE IMAGENS-->
@@ -183,7 +200,7 @@
                         </div>
                     </div>
                 </li>
-
+                
                 <!--IMG CENTRO-->
                 <li class="service-banner">
                     <figure>
